Korrekte Imports+ Image Namen

--- a/backend/.extras/compose/jenkins/Dockerfile
+++ b/backend/.extras/compose/jenkins/Dockerfile
@@ -1,5 +1,5 @@
 # syntax=docker/dockerfile:1.7.0
-# Aufruf:   docker build --tag juergenzimmermann/jenkins:2024.04.0 .
+# Aufruf:   docker build --tag team2/jenkins:2024.04.0 .
 #           Get-Content Dockerfile | docker run --rm --interactive hadolint/hadolint:2.12.1-beta-debian
 #           docker compose exec jenkins bash
 #               cat /etc/os-release
