--- a/backend/.extras/compose/jenkins/compose.yml
+++ b/backend/.extras/compose/jenkins/compose.yml
@@ -52,7 +52,7 @@ services:
           memory: 4G
 
   jenkins:
-    image: juergenzimmermann/jenkins:2024.04.0
+    image: team2/jenkins:2024.04.0
     restart: always
     ports:
       - published: 7070
