--- a/backend/.extras/compose/jenkins/Dockerfile
+++ b/backend/.extras/compose/jenkins/Dockerfile
@@ -1,5 +1,21 @@
 # syntax=docker/dockerfile:1.7.0
-# Aufruf:   docker build --tag team2/jenkins:2024.04.0 .
+
+# Copyright (C) 2022 - present Juergen Zimmermann, Hochschule Karlsruhe
+#
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <https://www.gnu.org/licenses/>.
+
+# Aufruf:   docker build --tag juergenzimmermann/jenkins:2024.04.0 .
 #           Get-Content Dockerfile | docker run --rm --interactive hadolint/hadolint:2.12.1-beta-debian
 #           docker compose exec jenkins bash
 #               cat /etc/os-release
@@ -17,7 +33,7 @@ FROM jenkins/jenkins:${JENKINS_VERSION}
 USER root
 
 RUN <<EOF
-set -eux
+set -ex
 
 apt-get update --yes
 apt-get upgrade --yes
