--- a/backend/.extras/compose/compose.wolfi.yml
+++ b/backend/.extras/compose/compose.wolfi.yml
@@ -14,5 +14,5 @@
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
 services:
-  buch:
-    image: juergenzimmermann/buch:2024.04.0-wolfi
+  auto:
+    image: juergenzimmermann/auto:2024.04.0-wolfi
