--- a/backend/.extras/compose/compose.yml
+++ b/backend/.extras/compose/compose.yml
@@ -1,6 +1,6 @@
 # Aufruf:   docker compose [-f compose.yml -f compose.distroless.yml|compose.wolfi.yml] up
-#           docker compose exec buch bash   # Bookworm
-#           docker compose exec buch ash    # Wolfi
+#           docker compose exec auto bash   # Bookworm
+#           docker compose exec auto ash    # Wolfi
 #             id
 #             ps -ef                        # NUR Wolfi, NICHT Bookworm
 #             env
@@ -25,8 +25,8 @@ include:
 
 # https://docs.docker.com/compose/compose-file/05-services
 services:
-  buch:
-    image: juergenzimmermann/buch:2024.04.0-bookworm
+  auto:
+    image: juergenzimmermann/auto:2024.04.0-bookworm
     depends_on:
       db:
         condition: service_healthy
@@ -51,13 +51,13 @@ services:
         target: /opt/app/dist/config/resources/jwt/private-key.pem
         read_only: true
       - type: bind
-        source: ../../src/config/resources/db/sqlite/buch.sqlite
-        target: /opt/app/dist/config/resources/db/sqlite/buch.sqlite
+        source: ../../src/config/resources/db/sqlite/auto.sqlite
+        target: /opt/app/dist/config/resources/db/sqlite/auto.sqlite
     env_file: app.env
     environment:
       # https://docs.docker.com/compose/compose-file/compose-file-v3/#variable-substitution
       - USER_PASSWORD_ENCODED=$$argon2i$$v=19$$m=4096,t=3,p=1$$aaxA2v/9rRSPGkwYN+NQog$$27Huii1XtD3iEd62fog+04G26LRPZMHoYCI6AGKTL8M
-    #hostname: buch
+    #hostname: auto
     cap_drop: [ALL]
     deploy:
       resources:
