--- a/.extras/compose/jenkins/compose.yml
+++ b/.extras/compose/jenkins/compose.yml
@@ -67,7 +67,7 @@ services:
           memory: 4G
 
   jenkins:
-    image: juergenzimmermann/jenkins:2024.04.0
+    image: team2/jenkins:2024.04.0
     restart: always
     ports:
       - published: 7070
@@ -77,7 +77,7 @@ services:
     networks: [jenkins-network]
     volumes:
       - type: bind
-        # /var/jenkins_home/workspace enthaelt das Verzeichnis "buch"
+        # /var/jenkins_home/workspace enthaelt das Verzeichnis "auto"
         source: C:/Zimmermann/volumes/jenkins/jenkins_home
         target: /var/jenkins_home
       - type: bind
