--- a/.extras/compose/sonarqube/compose.yml
+++ b/.extras/compose/sonarqube/compose.yml
@@ -29,16 +29,16 @@ services:
         target: 9092
     volumes:
       - type: bind
-        # source: /Users/gentlebookpro/Projekte/SWE/Zimmermann/volumes/sonarqube/data
-        source: ../../../../volumes/sonarqube/data
+        # source: C:/Zimmermann/volumes/sonarqube/data
+        source: C:/Zimmermann/volumes/sonarqube/data
         target: /opt/sonarqube/data
       - type: bind
-        # source: /Users/gentlebookpro/Projekte/SWE/Zimmermann/volumes/sonarqube/logs
-        source: ../../../../volumes/sonarqube/data/logs
+        # source: C:/Zimmermann/volumes/sonarqube/logs
+        source: C:/Zimmermann/volumes/sonarqube/data/logs
         target: /opt/sonarqube/logs
       - type: bind
-        # source: /Users/gentlebookpro/Projekte/SWE/Zimmermann/volumes/sonarqube/extensions
-        source: ../../../../volumes/sonarqube/extensions
+        # source: C:/Zimmermann/volumes/sonarqube/extensions
+        source: C:/Zimmermann/volumes/sonarqube/extensions
         target: /opt/sonarqube/lib/extensions
         read_only: true
     env_file: .env
