--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,12 @@ lerna-debug.log*
 # Prometheus und Grafana
 .extras/compose/prometheus-grafana/prometheus-data/*
 .extras/compose/prometheus-grafana/grafana.db
+
+# Compose
+.extras/compose/**
+.extras/compose/*
 .extras/compose
+.extras/*
 
 # OS
 .DS_Store
