--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,5 @@
   "files.associations": {
     "*.csv": "csv (semicolon)"
 },
-  "typescript.tsdk": "node_modules/typescript/lib",
-  "asciidoc.antora.enableAntoraSupport": false
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
