--- a/package.json
+++ b/package.json
@@ -1,51 +1,8 @@
 {
   "name": "auto-service",
   "version": "2024.04.0",
-  "description": "Beispiel",
-  "author": "Gruppe 2",
   "private": true,
-  "license": "GPL-3.0",
-  "exports": "./dist/src/main.js",
-  "type": "module",
-  "engines": {
-    "node": ">=20.11.1",
-    "npm": ">=10.3.0"
-  },
-  "scripts": {
-    "prebuild": "npm run clean",
-    "build": "nest build",
-    "start": "node dist/src/main.js",
-    "pre:dev": "npm run copy-resources",
-    "dev": "nest start --watch",
-    "debug": "nest start --debug --watch",
-    "test:ORIG": "jest",
-    "pretest": "npm run copy-resources",
-    "test": "set LOG_LEVEL=info&& jest --runInBand",
-    "test:istanbul": "npm t -- --coverage",
-    "test:logdebug": "jest --runInBand",
-    "test:dbserver": "set LOG_LEVEL=info&& set START_DB_SERVER=true&&jest --runInBand",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "asciidoctor": "node scripts/asciidoctor",
-    "clean": "rimraf dist log/server.log",
-    "copy-resources": "node scripts/copy-resources",
-    "depcheck": "depcheck",
-    "eslint": "eslint src __tests__",
-    "eslint:9": "set ESLINT_USE_FLAT_CONFIG=false&& eslint src __tests__",
-    "eslint:debug": "eslint --debug src __tests__",
-    "invoke-webrequest": "pwsh -Command Invoke-WebRequest https://localhost:3000/rest/1 -SslProtocol Tls13 -SkipCertificateCheck",
-    "leasot": "leasot --exit-nicely src/**/*.ts",
-    "madge": "madge --circular src/main.ts",
-    "madge:svg": "madge --image dependencies.svg src/main.ts",
-    "prettier": "prettier --cache --write \"src/**/*.ts\" \"__tests__/**/*.ts\"",
-    "prettier:check": "prettier --cache --check \"src/**/*.ts\" \"__tests__/**/*.ts\"",
-    "readme2html": "node scripts/readme2html",
-    "revealjs": "asciidoctor-revealjs .extras/doc/folien/folien.adoc",
-    "snyk:auth": "echo https://app.snyk.io/account && snyk auth",
-    "snyk": "snyk test",
-    "sonar": "node scripts/sonar-scanner",
-    "typedoc": "typedoc",
-    "tsc": "tsc --pretty"
-  },
+  "description": "Beispiel",
   "keywords": [
     "Node",
     "npm",
@@ -70,6 +27,45 @@
     "Jest",
     "ts-jest"
   ],
+  "license": "GPL-3.0",
+  "author": "Gruppe 2",
+  "type": "module",
+  "exports": "./dist/src/main.js",
+  "scripts": {
+    "asciidoctor": "node scripts/asciidoctor",
+    "prebuild": "npm run clean",
+    "build": "nest build",
+    "clean": "rimraf dist log/server.log",
+    "copy-resources": "node scripts/copy-resources",
+    "debug": "nest start --debug --watch",
+    "depcheck": "depcheck",
+    "dev": "nest start --watch",
+    "eslint": "eslint src __tests__",
+    "eslint:9": "set ESLINT_USE_FLAT_CONFIG=false&& eslint src __tests__",
+    "eslint:debug": "eslint --debug src __tests__",
+    "invoke-webrequest": "pwsh -Command Invoke-WebRequest https://localhost:3000/rest/1 -SslProtocol Tls13 -SkipCertificateCheck",
+    "leasot": "leasot --exit-nicely src/**/*.ts",
+    "madge": "madge --circular src/main.ts",
+    "madge:svg": "madge --image dependencies.svg src/main.ts",
+    "pre:dev": "npm run copy-resources",
+    "prettier": "prettier --cache --write \"src/**/*.ts\" \"__tests__/**/*.ts\"",
+    "prettier:check": "prettier --cache --check \"src/**/*.ts\" \"__tests__/**/*.ts\"",
+    "readme2html": "node scripts/readme2html",
+    "revealjs": "asciidoctor-revealjs .extras/doc/folien/folien.adoc",
+    "snyk": "snyk test",
+    "snyk:auth": "echo https://app.snyk.io/account && snyk auth",
+    "sonar": "node scripts/sonar-scanner",
+    "start": "node dist/src/main.js",
+    "pretest": "npm run copy-resources",
+    "test": "set LOG_LEVEL=info&& jest --runInBand",
+    "test:ORIG": "jest",
+    "test:dbserver": "set LOG_LEVEL=info&& set START_DB_SERVER=true&&jest --runInBand",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:istanbul": "npm t -- --coverage",
+    "test:logdebug": "jest --runInBand",
+    "tsc": "tsc --pretty",
+    "typedoc": "typedoc"
+  },
   "dependencies": {
     "@apollo/server": "4.10.2",
     "@apollo/subgraph": "2.7.4",
@@ -183,5 +179,9 @@
     "typescript": "5.4.4",
     "unified": "11.0.4",
     "weak-napi": "2.0.2"
+  },
+  "engines": {
+    "node": ">=20.11.1",
+    "npm": ">=10.3.0"
   }
 }
