--- a/.extras/compose/trivy/compose.wolfi.yml
+++ b/.extras/compose/trivy/compose.wolfi.yml
@@ -15,4 +15,4 @@
 
 services:
   trivy:
-    command: [image, juergenzimmermann/auto:2024.04.0-wolfi]
+    command: [image, team2/auto:2024.04.0-wolfi]
