--- a/.extras/compose/app.yml
+++ b/.extras/compose/app.yml
@@ -46,7 +46,7 @@ db:
 # K e y c l o a k
 # ==============================================================================
 keycloak:
-  authServerUrl: http://localhost:8080
+  authServerUrl: http://keycloak:8080
   realm: acme
   # siehe Keycloak Menuepunkt "Clients" > Tab "Clients list" > Spalte "Client ID"
   clientId: auto-client
