--- a/.extras/compose/compose.yml
+++ b/.extras/compose/compose.yml
@@ -1,18 +1,3 @@
-# Copyright (C) 2022 - present Juergen Zimmermann, Hochschule Karlsruhe
-#
-# This program is free software: you can redistribute it and/or modify
-# it under the terms of the GNU General Public License as published by
-# the Free Software Foundation, either version 3 of the License, or
-# (at your option) any later version.
-#
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU General Public License for more details.
-#
-# You should have received a copy of the GNU General Public License
-# along with this program.  If not, see <https://www.gnu.org/licenses/>.
-
 # Aufruf:   docker compose [-f compose.yml -f compose.distroless.yml|compose.wolfi.yml] up
 #           docker compose exec auto bash   # Bookworm
 #           docker compose exec auto ash    # Wolfi
@@ -25,12 +10,6 @@
 #             cat /etc/os-release
 #           docker compose down
 
-# https://docs.docker.com/compose/compose-file
-# https://docs.docker.com/compose/compose-file/compose-file-v3
-# https://github.com/compose-spec/compose-spec/blob/master/schema/compose-spec.json
-
-# https://docs.docker.com/compose/compose-file/14-include
-# Der "service" fuer das DB-System muss fuer "depends_on" bekannt sein
 include:
   - path: ./db/postgres/compose.yml
   #- path: ./db/mysql/compose.yml
@@ -62,17 +41,18 @@ services:
         target: /opt/app/dist/config/resources/tls/key.pem
         read_only: true
       - type: bind
-        source: ../../src/config/resources/jwt/private-key.pem
-        target: /opt/app/dist/config/resources/jwt/private-key.pem
+        source: ../../src/config/resources/tls/key.pem
+        target: /opt/app/dist/config/resources/tls/key.pem
         read_only: true
-      - type: bind
-        source: ../../src/config/resources/db/sqlite/auto.sqlite
-        target: /opt/app/dist/config/resources/db/sqlite/auto.sqlite
+      # - type: bind
+      #   source: ../../src/config/resources/db/sqlite/auto.sqlite
+      #   target: /opt/app/dist/config/resources/db/sqlite/auto.sqlite
     env_file: app.env
     environment:
       # https://docs.docker.com/compose/compose-file/compose-file-v3/#variable-substitution
       - USER_PASSWORD_ENCODED=$$argon2i$$v=19$$m=4096,t=3,p=1$$aaxA2v/9rRSPGkwYN+NQog$$27Huii1XtD3iEd62fog+04G26LRPZMHoYCI6AGKTL8M
-    #hostname: auto
+    hostname: auto
+    container_name: auto
     cap_drop: [ALL]
     deploy:
       resources:
