--- a/.extras/compose/keycloak/compose.yml
+++ b/.extras/compose/keycloak/compose.yml
@@ -39,7 +39,7 @@ services:
         target: 8443
     volumes:
       - type: bind
-        source: C:/Zimmermann/volumes/keycloak
+        source: /Users/gentlebookpro/Projekte/SWE/Zimmermann/volumes/keycloak
         # mit Unterverzeichnis h2
         target: /opt/keycloak/data
       - type: bind
